--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="search" type="id">Search</item>
+    <item name="select" type="id">Select</item>
+    <item name="rv" type="id"></item>
+    <item name="ticker" type="id"></item>
+    <item name="name" type="id"></item>
+    <item name="lastTradePrice" type="id"></item>
+    <item name="changeAmount" type="id"></item>
+    <item name="changePercentage" type="id"></item>
+    <item name="direction" type="id"></item>
 </resources>
